--- a/css/home/menu.css
+++ b/css/home/menu.css
@@ -1,22 +1,5 @@
-body{
-    margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-ul{
-    margin: 0px;
-    padding: 0px;
-    list-style: none;
-}
-
-a{
-    text-decoration: none;
-    
-}
-
 .header-bg{
-    background-color: black ;
-    
+    background-color: #000000 ;
 }
 
 .header{
@@ -70,12 +53,16 @@ a{
     }
 
     .header-menu a:hover{
-        background-color: #2e2e2e ;
+        background-color: #2e2e2e; 
     }
+
+    .header-menu a:hover:after{
+        display: none;
+    } 
 }
 
 @media(max-width:500px){
     .header-menu a{
         padding: 8px 12px;
-    }
+    }    
 }
