--- a/css/style.css
+++ b/css/style.css
@@ -5,5 +5,8 @@
 
 @import url(./global/global.css);
 
-@import url(./global/utilidades.css);
+@import url(./utilidades/utilidades.css);
 
+@import url(./utilidades/tipografia.css);
+
+@import url(./utilidades/cores.css);
