--- a/css/global/global.css
+++ b/css/global/global.css
@@ -3,8 +3,9 @@ body{
     margin: 0;
     font-family: 'Poppins', sans-serif;
 }
-p, h1, h2, ul{
+p, h1, h2, h3, h4, ul, span, blockquote{
     margin: 0px;
+    padding: 0px;
 }
 ul{
     padding: 0px;
@@ -19,6 +20,10 @@ a{
 img{
     max-width:100%;
     display: block;
+  
+}
+
+img[src$="jpg"]{
     border-radius: 4px;
 }
 
