--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import url(./utilidades/cores.css);
 @import url(./home/menu.css);
 
 @import url(./home/intro.css);
@@ -9,4 +10,10 @@
 
 @import url(./utilidades/tipografia.css);
 
-@import url(./utilidades/cores.css);
+@import url(./home/bicicleta-lista.css);
+
+@import url(./home/tech.css);
+
+@import url(./home/parceiros.css);
+
+@import url(./home/depoimento.css);
