--- a/css/utilidades/utilidades.css
+++ b/css/utilidades/utilidades.css
@@ -2,8 +2,7 @@
 .botao{
     background-image: linear-gradient(#ffbb00, #f2A50c);
     padding: 16px 23px;
-    font-size: 18px;
-    line-height: 1.5;
+    font: 600 1.125rem/1.35 "Poppins", sans-serif;
     color: #332200;
     border-radius: 4px;
     display: inline-block;
@@ -15,6 +14,35 @@
     .botao{
         margin-bottom: 16px;
         padding: 12px 16px;
-        font-size: 16px;
+        font-size: 1rem;
     }
+}
+
+.link{
+    display: inline-block;
+    color: var(--cor-p1);
+    font: 500 1.5rem/1.5 "Poppins", sans-serif;
+    text-transform: uppercase;
+    width: max-content;
+}
+
+
+.link::after{
+    content:"";
+    width: 100%;
+    height: 4px;
+    background-color: currentColor;
+    display: block;
+}
+
+.link:hover{
+   color: var(--cor0);
+}
+.container{
+    box-sizing: border-box;
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 20px;
+    padding-right: 20px;
 }
