--- a/css/style.css
+++ b/css/style.css
@@ -10,10 +10,20 @@
 
 @import url(./utilidades/tipografia.css);
 
-@import url(./home/bicicleta-lista.css);
-
 @import url(./home/tech.css);
 
 @import url(./home/parceiros.css);
 
 @import url(./home/depoimento.css);
+/* bicicletas */
+@import url(./bicicletas/bicicleta-lista.css);
+/* seguros*/
+@import url(./seguros/seguros.css);
+
+@import url(./home/footer.css);
+
+/* termos*/
+@import url(./termos/termos.css);
+
+/* bicicletas*/
+@import url(./bicicletas/bicicletas.css);
