--- a/css/utilidades/utilidades.css
+++ b/css/utilidades/utilidades.css
@@ -1,48 +1,84 @@
-/* BOTAO*/ 
-.botao{
-    background-image: linear-gradient(#ffbb00, #f2A50c);
-    padding: 16px 23px;
-    font: 600 1.125rem/1.35 "Poppins", sans-serif;
-    color: #332200;
-    border-radius: 4px;
-    display: inline-block;
-    box-shadow: 0 1px 2px rgb(0, 0, 1);
+/* BOTAO*/
+.botao {
+  background-image: linear-gradient(#ffbb00, #f2a50c);
+  background-color: #ffbb00;
+  padding: 16px 23px;
+  font: 600 1.125rem/1.35 "Poppins", sans-serif;
+  color: #332200;
+  border-radius: 4px;
+  display: inline-block;
+  box-shadow: 0 1px 2px rgb(0, 0, 1);
+  max-width: max-content;
+}
 
+.botao:hover {
+  color: var(--cor-0);
 }
  
-@media(max-width:800px){
-    .botao{
-        margin-bottom: 16px;
-        padding: 12px 16px;
-        font-size: 1rem;
-    }
+.botao.secundario{
+  background-image: none;
+  background-color: var(--cor-10);
+  color: var(--cor-2);
+}
+.botao.secundario:hover {
+  color: var(--cor-9);
+}
+@media (max-width: 800px) {
+  .botao {
+    margin-bottom: 16px;
+    padding: 12px 16px;
+    font-size: 1rem;
+  }
 }
 
-.link{
-    display: inline-block;
-    color: var(--cor-p1);
-    font: 500 1.5rem/1.5 "Poppins", sans-serif;
-    text-transform: uppercase;
-    width: max-content;
+.link {
+  display: inline-block;
+  color: var(--cor-p1);
+  font: 500 1.5rem/1.5 "Poppins", sans-serif;
+  text-transform: uppercase;
+  width: max-content;
+}
+.link:hover {
+  color: var(--cor0);
+}
+.link::after {
+  content: "";
+  width: 100%;
+  height: 4px;
+  background-color: currentColor;
+  display: block;
 }
 
-
-.link::after{
-    content:"";
-    width: 100%;
-    height: 4px;
-    background-color: currentColor;
-    display: block;
+.container {
+  box-sizing: border-box;
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
-.link:hover{
-   color: var(--cor0);
+/** titulo internas**/ 
+
+.titulo-bg{
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color:var(--cor-11);
 }
-.container{
-    box-sizing: border-box;
-    max-width: 1200px;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 20px;
-    padding-right: 20px;
+
+.titulo p{
+  margin-bottom: 4px;
+}
+
+@media(max-width: 800px){
+  .titulo-bg{
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+  
+  .titulo p{
+    font-size: 1rem;
+    text-transform: lowercase;
+    font-weight: 400;
+  }
 }
