--- a/css/utilidades/utilidades.css
+++ b/css/utilidades/utilidades.css
@@ -7,7 +7,6 @@
   color: #332200;
   border-radius: 4px;
   display: inline-block;
-  box-shadow: 0 1px 2px rgb(0, 0, 1);
   max-width: max-content;
 }
 
@@ -23,6 +22,30 @@
 .botao.secundario:hover {
   color: var(--cor-9);
 }
+
+.botao.seta{
+  text-transform: uppercase;
+  display: flex;
+  align-items: center;
+}
+.botao.seta::after{
+  content: "  ";
+  background-image: url(./../../img/icones/seta.svg);
+  width: 18px;
+  height: 10px;
+  display: inline-block;
+  margin-left: 12px;
+}
+
+.botao.seta:hover{
+  color: inherit;
+  background-color:var(--cor-p2);
+}
+.botao.seta:hover::after{
+  transform: translatex(4px);
+  transition: .3s;
+}
+
 @media (max-width: 800px) {
   .botao {
     margin-bottom: 16px;
